Improved support for mobile and tablet screen sizes. Added a more lightweight environment texture. Fixed missing background texture in css.

--- a/src/App.css
+++ b/src/App.css
@@ -145,8 +145,13 @@
 }
 
 .clip-shadow {
+  max-width: 90%;
+  max-height: 90%;
   display: flex;
-  margin: 16px;
+  justify-content: center;
+  align-items: center;
+  margin: -16px;
+  padding: 16px;
   filter: drop-shadow(0 4px 10px black);
 }
 
@@ -227,6 +232,7 @@
 .nav-list {
   opacity: 0;
   width: 0;
+  gap: 8px;
   will-change: opacity, width, margin;
   transition: all 500ms ease;
   content: "";
@@ -306,10 +312,8 @@
   position: fixed;
   top: 0;
   bottom: 0;
+  right: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
-  height: 100%;
   opacity: 0;
   will-change: opacity, transform;
   transition: opacity 500ms ease-out, transform 350ms;
@@ -331,8 +335,6 @@
 .nav-btn {
   position: relative;
   background-color: #40404000;
-  margin-top: 8px;
-  margin-bottom: 8px;
   width: fit-content;
   border: none;
   outline: none;
@@ -410,7 +412,7 @@
   filter: drop-shadow(0 0 2em #61dafbaa);
 } */
 
-@media (max-width: 480px) {
+@media (max-width: 768px) {
   .sidebar {
       width: 32px;
   }
@@ -440,6 +442,17 @@
   }
 
   .nav {
-      margin-left: 0;
+    margin-left: 0;
+    align-items: end;
+  }
+
+  .nav-list {
+    gap: 0;
+  }
+
+  .page {
+    left: 32px;
+    right: 8px;
+    overflow: hidden;
   }
 }
