--- a/src/components/Carousel/Carousel.css
+++ b/src/components/Carousel/Carousel.css
@@ -102,7 +102,7 @@
   .carousel-nav {
     position: absolute;
     left: unset;
-    right: 0.5em;
+    right: 0.25em;
     bottom: 50%;
     transform: translateY(50%);
     flex-direction: column;
