--- a/src/index.css
+++ b/src/index.css
@@ -28,8 +28,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
-  background-image: url('src/assets/dark-soul-fantasy-knight.webp');
-  background-size: contain;
+  background-color: black;
   overflow: hidden;
 }
 
