--- a/src/pages/AboutMe/AboutMe.css
+++ b/src/pages/AboutMe/AboutMe.css
@@ -1,12 +1,13 @@
 .about-me {
     position: relative;
+    width: 100%;
+    max-width: 1000px;
     background-color: #222222;
     display: flex;
-    min-height: 420px;
 }
 
 .photo {
-    max-width: 280px;
+    max-width: 250px;
     height: 100%;
     object-fit: cover;
 }
@@ -48,6 +49,7 @@
 }
 
 .about {
+    max-width: 100%;
     padding: 1.25em;
     display: flex;
     flex-direction: column;
@@ -57,11 +59,6 @@
 .about-text {
     padding-bottom: 1em;
     text-align: left;
-    font-size: 18px;
-}
-
-.git-calendar {
-    margin: auto;
 }
 
 .about-bottom {
@@ -120,11 +117,14 @@
     height: 24px;
 }
 
-@media (max-width: 480px) {
+@media (max-width: 1050px) {
     .about-me {
         flex-direction: column;
-        max-width: 340px;
-        margin-right: -32px;
+        width: 100%;
+    }
+
+    .about-text {
+        font-size: 14px;
     }
 
     .photo {
@@ -139,11 +139,6 @@
         max-width: unset;
     }
 
-    .git-calendar {
-        width: 100%;
-        overflow-x: scroll;
-    }
-
     .about-bottom {
         flex-direction: column;
         align-items: center;
@@ -151,27 +146,8 @@
     }
 }
 
-@media (max-width: 768px) {
-    .about-me {
-        flex-direction: column;
-        max-width: 600px;
-        margin-right: -32px;
-    }
-
-    .photo {
-        max-width: unset;
-        width: 100%;
-        max-height: 240px;
-        object-fit: cover;
-    }
-    
-    .photo-wrapper {
-        position: relative;
-        max-width: unset;
-    }
-
+@media (max-height: 700px) {
     .git-calendar {
-        width: 100%;
-        overflow-x: scroll;
+        display: none;
     }
 }
